2010-01-14  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_iso_2022): Fix handling of euc-xx coding
	systems.

2010-01-14  Kenichi Handa  <handa@m17n.org>

	Make auto-composition work on all buffers even if they are
	fundamental mode.

	* composite.c (Vauto_composition_mode): New variable.
	(composition_compute_stop_pos): Check Vauto_composition_mode
	instead of Vauto_composition_function.
	(composition_adjust_point, Ffind_composition_internal): Likewise.
	(syms_of_composite): Declare Lisp variable
	"auto-composition-mode" here.

2010-01-13  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.c (x_term_init): Avoid garbage-collecting the new terminal
	during call to vendor-specific-keysyms (Bug#5365).

2010-01-13  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* keyboard.c (input_available_signal) [SYNC_INPUT]:
	Call SIGNAL_THREAD_CHECK (Bug#5333).

	* atimer.c (alarm_signal_handler) [!SYNC_INPUT]:
	Call SIGNAL_THREAD_CHECK.

2010-01-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	Try to fix bug#5314.  This is probably not the final word, tho.
	* buffer.c (Fset_buffer_modified_p): Try and be careful not to modify
	recent-auto-save-p as a side-effect.
	* buffer.h (BUF_AUTOSAVE_MODIFF): New macro.
	* buffer.c (Fkill_buffer, reset_buffer):
	* editfns.c (Fsubst_char_in_region):
	* fileio.c (Finsert_file_contents, Fdo_auto_save)
	(Fset_buffer_auto_saved, Frecent_auto_save_p): Use it.

2010-01-13  Kenichi Handa  <handa@m17n.org>

	Display buffer name, etc. in mode line by composing correctly.

	* xdisp.c (reseat_to_string): Call composition_compute_stop_pos if
	STRING is not nil.
	(display_mode_element): Adjust for the change of
	decode_mode_spec and display_line.
	(decode_mode_spec): Change arg MULTIBYTE to STRING.
	(display_string): Handle the case that STRING is non-null and
	LISP_STRING is not nil.

	* xterm.c (x_draw_composite_glyph_string_foreground):
	Pay attention to s->face->overstrike.
